@@ -1,3 +1,7 @@
+2008-02-12  Mark Ellis <mark@mpellis.org.uk>
+
+	* tidy debugging and utils
+
 2008-02-05  Mark Ellis <mark@mpellis.org.uk>
 
 	* set password property to 'unset' if not passworded
